--- a/portal.html
+++ b/portal.html
@@ -138,7 +138,7 @@
                 <p>积分奖励及兑换系统</p>
             </a>
             
-            <a href="拼音练习v26.1.9.html" class="app-card">
+            <a href="pinyin2026.html" class="app-card">
                 <h3>🔤 学拼音</h3>
                 <p>拼音发音和拼写练习</p>
             </a>
