--- a/PinyinTest.html
+++ b/PinyinTest.html
@@ -2,7 +2,7 @@
 <html lang="zh-CN">
 <!-- 在页面的合适位置添加返回按钮 -->
 <div style="position: fixed; top: 20px; left: 20px; z-index: 1000;">
-    <a href="../portal.html" style="
+    <a href="portal.html" style="
         display: inline-block;
         background: #667eea;
         color: white;
